..F....... [ZBX-24030] fixed manually closed icon visibility in high contrast theme

--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -7643,7 +7643,7 @@ td.inactive-bg {
   background-position: -249px -325px; }
 
 .icon-action-close::before {
-  background-position: -224px -325px; }
+  background-position: -224px -285px; }
 
 .icon-action-msg::before {
   background-position: -299px -285px; }
